// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should match snapshot when sidebar closed 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={false}
  mapToProps={[Function]}
  sidebarView="networkGraphs"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_BOUNDING_BOX 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="boundingBox"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_CUSTOM_QUERY 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="customQuery"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EDGES_FILTER 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="edgesFilter"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EDGES_SELECTION 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="edgesSelection"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EDIT_ONTOLOGY 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="editOntology"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_ENTRY_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="entrySearch"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_EXPORT 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="export"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_FREE_TEXT_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="freeTextSearch"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_GRAPH_OPTIONS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="networkGraphOptions"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_GRAPHS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="networkGraphs"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_NEIGHBOURHOOD 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="nodeNeighbourhood"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_NODES_FILTER 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="nodesFilter"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_NODES_SELECTION 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="nodesSelection"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_SETTINGS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="settings"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_SHORTEST_PATH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="shortestPath"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_STRUCTURED_SEARCH 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="structuredSearch"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_STYLING 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="styling"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Sidebar should match snapshot when sidebar open and SIDEBAR_VIEW_SYNONYMS 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  isSidebarOpen={true}
  mapToProps={[Function]}
  sidebarView="synonyms"
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
